# rust-analyzer

./: Cargo.toml
crates/base-db/src/: input.rs
crates/hir-def/: Cargo.toml
crates/hir-def/src/: item_scope.rs  item_tree.rs  lib.rs  nameres.rs
crates/hir-expand/src/: name.rs  proc_macro.rs
crates/hir-ty/src/: lib.rs
crates/ide-assists/src/: lib.rs
crates/ide-completion/src/: lib.rs
crates/ide/src/: lib.rs
crates/intern/: Cargo.toml
crates/intern/src/: lib.rs
crates/load-cargo/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/profile/: Cargo.toml
crates/rust-analyzer/: Cargo.toml
crates/rust-analyzer/src/: lib.rs
crates/rustc-wrapper/: Cargo.toml
crates/rustc-wrapper/src/: lib.rs  rustc_wrapper.rs
crates/vfs/: Cargo.toml
crates/vfs-notify/src/: lib.rs
crates/vfs/src/: lib.rs  loader.rs
lib/lsp-server/: Cargo.toml
